[package]
name = "Heartbeat"
version = "1.0.0"
description = "A patient management system designed for doctors. In this app doctors can add patient data using simple forms, which later they can save as PDF or print as document."
authors = ["fadhilsaheer"]
license = "MIT"
repository = "https://github.com/hyfic/heartbeat"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
